--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>Hello World!</h1>
+  <h1 class="text-4xl text-red-600">Hello World!</h1>
   <script type="module" src="/main.js"></script>
 </body>
 
