--- a/contact.html
+++ b/contact.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home</title>
+  <title>Contact us</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <header>
-    <a href="/">Home</a>
-    <a href="products.html">Products</a>
-    <a href="about.html">About us</a>
-    <a href="contact.html">Contact us</a>
-  </header>
+    <header>
+        <a href="/">Home</a>
+        <a href="products.html">Products</a>
+        <a href="about.html">About us</a>
+        <a href="contact.html">Contact us</a>
+      </header>
 
-  <h1 class="text-4xl">Home</h1>
+  <h1 class="text-4xl">Contact us</h1>
   <script type="module" src="/main.js"></script>
 </body>
 
